<resources>
    <string name="app_name">我是课程表</string>

    <string name="week_sat">星期六</string>
    <string name="week_sun">星期日</string>
    <string name="week_work_day">星期一 ~ 星期五</string>

    <string name="semester">学 期</string>
    <string name="table">表 格</string>
    <string name="settings_course">课 程</string>
    <string name="more">更 多</string>
    <string name="donation">捐赠作者</string>

    <string name="confirm">确 认</string>
    <string name="cancel">取 消</string>

    <string name="course">课程名称</string>
    <string name="classroom">上课地点</string>
    <string name="line"> ~ </string>
    <string name="week">周</string>

    <string name="start_date">起始日期</string>
    <string name="end_date">结束日期</string>
    <string name="semester_week">周数</string>
    <string name="click_edit">点击更改</string>
    <string name="course_morning">上午课程</string>
    <string name="afternoon_course">下午课程</string>
    <string name="course_evening">晚上课程</string>
    <string name="work_day">上课日</string>
    <string name="donation_hint">点击支付宝二维码可跳转至支付宝\n长按二维码可保存至本地</string>
    <string name="msg_camera_framework_bug">未获得相机权限</string>
    <string name="msg_default_status">请扫描分享课表生成的二维码</string>
    <string name="msg_pick_from_photo">从相册中选取</string>

    <string name="permission_camera_fail">未获得相机权限，无法扫描二维码</string>
    <string name="permission_camera_message">扫描二维码需要使用相机，因此要获得相机权限</string>
    <string name="permission_write_fail_qr_code">未获得写入权限，无法存储二维码</string>
    <string name="permission_write_message_qr_code">将二维码保存到手机中需要获得写入权限</string>
    <string name="permission_read_fail_background">未获得读取权限，无法加载图片</string>
    <string name="permission_read_message">从系统中加载图片需要获得读取权限</string>

    <string name="i_know">我知道了</string>

    <string name="dialog_delete">确认删除？</string>

    <string name="app_widget_configure_intensity">背景颜色强度（%d%%）</string>
    <string name="app_widget_configure_time_style">时间样式（%s）</string>
    <string name="app_widget_configure_week_style_enable">显示周数（例：12月5日 周三 15）</string>
    <string name="app_widget_configure_week_style_disable">显示周数（例：12月5日 周三）</string>

    <string name="dialog_feedback">如果软件出现了问题，可以通过邮件进行反馈。
        \n如果觉得软件有可以改进的地方也欢迎反馈，但请详细描述改进是为了解决什么问题。
        \n\n因为还要上班，还要忙其他事情，你们的反馈我肯定会看到，但很抱歉无法100%%回复你们。提出的改进因为要考虑所有人的情况，可能会采纳也可能不会采纳，请各位理解。
        \n\n反馈邮箱：itimetable@foxmail.com，反馈时请告诉我软件的版本号，当前版本：%s。
        \n\n谢谢大家。
    </string>


</resources>
