<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_start_hint"
        style="@style/SettingsItem.LargeText"
        android:layout_marginTop="0dp"
        android:text="@string/start_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_start"
        style="@style/SettingsItem.NormalText"
        android:layout_alignBottom="@id/tv_start_hint"
        android:layout_toStartOf="@id/tv_start_hint"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_start_hint"
        app:layout_constraintLeft_toRightOf="@+id/tv_start_hint"/>

    <TextView
        android:id="@+id/tv_end_hint"
        style="@style/SettingsItem.LargeText"
        android:text="@string/end_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_hint"/>

    <TextView
        android:id="@+id/tv_end"
        style="@style/SettingsItem.NormalText"
        android:layout_alignBottom="@id/tv_end_hint"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_end_hint"
        app:layout_constraintLeft_toRightOf="@+id/tv_end_hint"/>

    <TextView
        android:id="@+id/tv_semester_week"
        style="@style/SettingsItem.LargeText"
        android:layout_alignBottom="@id/tv_start_hint"
        android:text="@string/semester_week"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_start_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.sunrain.timetablev4.view.UserSpinner
        android:id="@+id/sp_week"
        style="@style/SettingsItem.NormalText"
        android:layout_alignBaseline="@id/tv_semester_week"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_semester_week"
        app:layout_constraintLeft_toRightOf="@+id/tv_semester_week"/>

</androidx.constraintlayout.widget.ConstraintLayout>